--- a/index.html
+++ b/index.html
@@ -1,7 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gilmore Girls Fanpage</title>
-    <style>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Gilmore Girls Fanpage</title>
+        <style>
+        </style>
+    </head>
+    <body>
+
+        <header>
+            <h1>Gilmore Girls Fanpage</h1>
+        </header>
+
+        <main>
+            <section>
+                <h2>About Gilmore Girls</h2>
+                <p>Gilmore Girls is an American television series created by Amy
+                    Sherman-Palladino. The show follows the lives of Lorelai
+                    Gilmore and her daughter Rory, as they navigate through the
+                    ups and downs of life in the charming town of Stars Hollow.</p>
+            </section>
+
+            <section>
+                <h2>Main Characters</h2>
+                <p>Some of the main characters in Gilmore Girls include:</p>
+                <ul>
+                    <li>Lorelai Gilmore</li>
+                    <li>Rory Gilmore</li>
+                    <li>Luke Danes</li>
+                    <li>Emily Gilmore</li>
+                    <!-- Add more characters as needed -->
+                </ul>
+            </section>
+
+            <section>
+                <h2>Image Gallery</h2>
+                <img src="lorelai.jpg" alt="Lorelai Gilmore">
+                <img src="rory.jpg" alt="Rory Gilmore">
+                <!-- Add more images as needed -->
+            </section>
+        </main>
+
+        <footer>
+            &copy; 2023 Gilmore Girls Fanpage
+        </footer>
+
+    </body>
+</html>
