adding h2 tag to html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li>Emily Gilmore</li>
                     <!-- Add more characters as needed -->
                 </ul>
+                <h2>Stars Hollow, Connecticut is the town the Gilmore lives.</h2>
             </section>
 
             <section>
