--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
             <section>
                 <h2>Image Gallery</h2>
-                <img src="lorelai.jpg" alt="Lorelai Gilmore">
-                <img src="rory.jpg" alt="Rory Gilmore">
+                <img src="images/lorelai.png" alt="Lorelai Gilmore">
+                <img src="images/Rory_Gilmore_season_1.png" alt="Rory Gilmore">
                 <!-- Add more images as needed -->
             </section>
         </main>
