--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <section>
                 <h2>Image Gallery</h2>
-                <img src="images/lorelai.png" alt="Lorelai Gilmore">
+                <img src="images/Lorelai.png" alt="Lorelai Gilmore">
                 <img src="images/Rory_Gilmore_season_1.png" alt="Rory Gilmore">
                 <!-- Add more images as needed -->
             </section>
